samples/echo-service-multi-cluster/echo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment-1
  labels:
    kcp.dev/cluster: kcp-cluster-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server-1
  template:
    metadata:
      labels:
        app: echo-server-1
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: httpecho-1
  labels:
    kcp.dev/cluster: kcp-cluster-1
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment-2
  labels:
    kcp.dev/cluster: kcp-cluster-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server-2
  template:
    metadata:
      labels:
        app: echo-server-2
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: httpecho-2
  labels:
    kcp.dev/cluster: kcp-cluster-2
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server-2
